Improved look of report on smaller devices. Showing report settings no longer uses js.

--- a/admin/css/activities-admin.css
+++ b/admin/css/activities-admin.css
@@ -231,17 +231,34 @@
 
 #acts-show-nice-settings {
   display: none;
-  background-color: white;
+  width: 50px;
+  height: 50px;
+  font-size: 50px;
   position: absolute;
   right: 19px;
   z-index: 2;
 }
 
-#acts-show-nice-settings,
-#acts-show-nice-settings > .dashicons  {
-  width: 50px;
-  height: 50px;
-  font-size: 50px;
+#acts-show-nice-settings::before {
+  content: "\f333";
+}
+
+#acts-nice-settings-wrap > input {
+  width: 52px;
+  height: 52px;
+  margin: 0;
+  position: absolute;
+  right: 19px;
+  z-index: 3;
+  opacity: 0;
+}
+
+#acts-nice-settings-wrap > input:checked ~ #acts-nice-settings  {
+  transform: none;
+}
+
+#acts-nice-settings-wrap > input:checked ~ #acts-show-nice-settings::before {
+  content: "\f158";
 }
 
 #acts-nice-settings {
@@ -558,18 +575,19 @@
     display: block;
   }
 
-  .acts-nice-members-info {
-    border-bottom: none;
-  }
-
   .acts-nice-members-info,
   .acts-nice-members-time {
     width: 100% !important;
+    border-right: 1px solid black !important;
   }
 }
 
 /* Medium devices (landscape tablets, 768px and down) */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 782px) {
+  #acts-nice-preview input[type=checkbox] {
+    margin: 0 2px 2px 0;
+  }
+
   .acts-nice-members-row {
     flex-direction: row;
     flex-wrap: wrap;
@@ -585,9 +603,14 @@
     width: 100%;
   }
 
+  .acts-nice-members-info:first-child {
+    border-right: 1px dashed lightgrey;
+  }
+
   .acts-nice-members-info {
     width: 40%;
     flex-grow: 1;
+    border-bottom: none;
   }
 
   .acts-nice-members-time {
@@ -621,6 +644,7 @@
   body {
     overflow-x: hidden;
   }
+
   #acts-nice-settings-wrap {
     position: absolute;
     right: -20px;
@@ -636,7 +660,7 @@
     transform-origin: 0% 0%;
     transform: translate(100%, 0);
 
-    transition: transform 0.3s cubic-bezier(0.77,0.2,0.05,1.0);
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
   }
 }
 
